# py4sci

./: README.md  pyproject.toml
src/deep_learning/perceptron/: __init__.py  __main__.py  activation.py  loss.py  models.py
src/homework/: ecs322_hw-01.html  ecs322_hw-01.ipynb  perceptron.ipynb
src/py4sci/: workshop.ipynb
