[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["Sattwik Sahu <sattwik21@iiserb.ac.in>"]
readme = "README.md"
packages = [{include = "deep_learning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
scipy = "^1.11.4"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
jupyter = "^1.0.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
